--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
 GMAIL_PASSWORD=jtbwnuuikxvpipom
+
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyD8emC50jV2_ZnsCdBlpIDAb54Ku_9_pXg
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=star-contractor-web-agency.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=star-contractor-web-agency
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=star-contractor-web-agency.appspot.com
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=1025435588330
+NEXT_PUBLIC_FIREBASE_APP_ID=1:1025435588330:web:52c78ecd17c8c5637a2993
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-KK6SFMDY1P
