--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "10.4.15",
     "firebase": "^10.8.0",
     "next": "13.4.19",
+    "next-sitemap": "^4.2.3",
     "nodemailer": "^6.9.9",
     "postcss": "8.4.29",
     "react": "18.2.0",
