--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/font": "^13.4.19",
     "autoprefixer": "10.4.15",
     "firebase": "^10.8.0",
+    "framer-motion": "^11.0.6",
     "next": "13.4.19",
     "next-sitemap": "^4.2.3",
     "nodemailer": "^6.9.9",
