--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev & npx next-video sync -w",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -14,14 +14,11 @@
     "firebase": "^10.8.0",
     "framer-motion": "^11.0.6",
     "next": "13.4.19",
-    "next-sitemap": "^4.2.3",
-    "next-video": "^0.15.0",
     "nodemailer": "^6.9.9",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
-    "react-player": "^2.14.1",
     "tailwindcss": "3.3.3"
   }
 }
